--- a/index.html
+++ b/index.html
@@ -588,7 +588,7 @@
             </div>
             <div class="modal-body">
                 <h3>Xis Tibia Dashboard</h3>
-                <p>Versão Web - Moderna e Futurista</p>
+                <p>Versão Web</p>
                 <p>Uma ferramenta completa para jogadores de Tibia</p>
                 <p>Desenvolvido para a comunidade</p>
                 <hr>
@@ -596,7 +596,6 @@
                 <ul>
                     <li><b>Navegação por abas</b>: Clique nas abas para acessar diferentes funcionalidades</li>
                     <li><b>Design responsivo</b>: Funciona em desktop e dispositivos móveis</li>
-                    <li><b>Interface moderna</b>: Design futurista com efeitos neon</li>
                 </ul>
                 <p><b>Funcionalidades:</b></p>
                 <ul>
@@ -605,10 +604,9 @@
                     <li>🤑 Farm - Controle de farm e lucro</li>
                     <li>💰 Divisão de Loot - Calculadora de loot</li>
                     <li>⚖️ Divisão de Drops - Controle de drops</li>
-                    <li>⏰ Timers - Timers úteis</li>
+                    <li>⏰ Timers - Timers úteis para bosses e hunts</li>
                     <li>🔑 Senhas - Gerenciador de senhas</li>
                 </ul>
-                <p><b>Status:</b> ✅ Sistema estável e modernizado</p>
             </div>
         </div>
     </div>
