--- a/index.html
+++ b/index.html
@@ -31,7 +31,11 @@
             </div>
             
             <div class="tab-content" id="tab-content">
-                <!-- As abas serão carregadas dinamicamente aqui -->
+                <!-- Loading inicial -->
+                <div class="tab-loading">
+                    <div class="loading-spinner"></div>
+                    <p>Carregando Imbuements...</p>
+                </div>
             </div>
         </div>
 
@@ -52,7 +56,28 @@
                 <button class="close-modal">&times;</button>
             </div>
             <div class="modal-body">
-                <!-- conteúdo do modal -->
+                <h3>Xis Tibia Dashboard</h3>
+                <p>Versão Web - Moderna e Futurista</p>
+                <p>Uma ferramenta completa para jogadores de Tibia</p>
+                <p>Desenvolvido para a comunidade</p>
+                <hr>
+                <p><b>Como usar:</b></p>
+                <ul>
+                    <li><b>Navegação por abas</b>: Clique nas abas para acessar diferentes funcionalidades</li>
+                    <li><b>Design responsivo</b>: Funciona em desktop e dispositivos móveis</li>
+                    <li><b>Interface moderna</b>: Design futurista com efeitos neon</li>
+                </ul>
+                <p><b>Funcionalidades:</b></p>
+                <ul>
+                    <li>✨ Imbuements - Calculadora de imbuements</li>
+                    <li>🔧 Services - Gerenciador de services</li>
+                    <li>🤑 Farm - Controle de farm e lucro</li>
+                    <li>💰 Divisão de Loot - Calculadora de loot</li>
+                    <li>⚖️ Divisão de Drops - Controle de drops</li>
+                    <li>⏰ Timers - Timers úteis</li>
+                    <li>🔑 Senhas - Gerenciador de senhas</li>
+                </ul>
+                <p><b>Status:</b> ✅ Sistema estável e modernizado</p>
             </div>
         </div>
     </div>
