--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Xis Tibia Dashboard</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+        /* Fallback caso o CSS não carregue */
+        body {
+            background: #0f0f23;
+            color: white;
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 20px;
+        }
+    </style>
 </head>
 <body>
     <div class="container">
