--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Xis Tibia Dashboard</title>
+    
+    <!-- Favicons -->
+    <link rel="icon" type="image/x-icon" href="images/xislogo.ico">
+    <link rel="icon" type="image/png" href="images/xislogo.png">
+    <link rel="apple-touch-icon" href="images/xislogo.png">
+    <meta name="theme-color" content="#2a9fd6">
+    
+    <!-- CSS Files -->
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/dark-theme.css">
     <link rel="stylesheet" href="styles/neon-effects.css">
